fixed CSS issue with post and comment overflowing div

--- a/client/src/components/comments/comments.scss
+++ b/client/src/components/comments/comments.scss
@@ -108,6 +108,7 @@
 
         p {
           font-size: 1.5rem;
+          word-break: break-word;
         }
       }
 
