--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -90,7 +90,9 @@
 
       p {
         font-size: 1.6rem;
+        word-break: break-word;
         padding: 1rem;
+
 
         @include small {
           font-size: 1.5rem;
