--- a/client/src/components/profileData/profileData.scss
+++ b/client/src/components/profileData/profileData.scss
@@ -10,19 +10,14 @@
     color: themed("textColor");
     background-color: themed("bgSoft");
     overflow-y: auto;
-    padding: 0 1rem 2rem 2rem;
+    padding: 0 1rem 2rem 1rem;
 
     @include medium {
       width: 80vw;
-      padding: 2rem;
     }
 
     @include tablet {
       width: 100vw;
-    }
-
-    @include xsmall {
-      padding: 1rem;
     }
 
     .profile-container {
@@ -79,8 +74,8 @@
       .user-info {
         position: relative;
         width: 100%;
-        height: 330px;
-        max-height: 500px;
+        height: 280px;
+        max-height: 280px;
         color: themed("textColor");
         background-color: themed("bg");
         border-bottom-left-radius: 1rem;
@@ -97,6 +92,7 @@
         }
 
         .friends-contact {
+          height: 30px;
           display: flex;
           justify-content: space-between;
 
@@ -131,28 +127,28 @@
 
         .main-info {
           position: absolute;
-          top: calc(50% + 42.5px); // 1/2 of 1/2 of profile pic height
+          top: calc(50% + 2.7rem);
           left: 50%;
           transform: translate(-50%, -50%);
           width: 100%;
-          max-height: calc(100% - 42.5px);
+          height: calc(280px - 85px); // 85px = 1/2 of profile pic
           display: flex;
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          text-align: center;
           gap: 1.5rem;
           padding: 1rem;
 
           @include small {
-            top: calc(50% + 37.5px); // 1/2 of 1/2 of profile pic height
-            max-height: calc(100% - 37.5px);
+            height: calc(280px - 75px); // 75px = 1/2 of profile pic
             gap: 1rem;
             padding: 0.5rem;
           }
 
           h2 {
+            width: 100%;
             font-size: 1.7rem;
-            text-align: center;
             line-height: 1;
             word-break: break-word; // In case of very long names
           }
@@ -165,7 +161,7 @@
             font-size: 1.5rem;
             line-height: 1;
             word-break: break-word;
-            gap: 0.5rem;
+            gap: 0.3rem;
 
             @include small {
               width: 100%;
